// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchSuggestions should render proteome suggestions given an organism id 1`] = `
<DocumentFragment>
  <small>
     or expand search to "
    <b>
      9606
    </b>
    " to 
    <a
      href="/uniprotkb?query=%28taxonomy_id%3A9606%29"
    >
      include lower taxonomic ranks
    </a>
     or restrict to reference proteome 
    <a
      href="/uniprotkb?query=organism_id%3A9606+AND+%28proteome%3AUP000005640%29"
    >
      UP000005640
    </a>
  </small>
</DocumentFragment>
`;

exports[`SearchSuggestions should render suggestions 1`] = `
<DocumentFragment>
  <span>
    <small>
       or search 
      <span
        translate="no"
      >
        "eve"
      </span>
       as a 
      <a
        class="no-wrap"
        href="/uniprotkb?query=strain:eve"
      >
        Strain
      </a>
      , 
      <a
        class="no-wrap"
        href="/uniprotkb?query=protein_name:eve"
      >
        Protein Name
      </a>
      , 
      <a
        class="no-wrap"
        href="/uniprotkb?query=gene:eve"
      >
        Gene Name
      </a>
      , 
      <a
        class="no-wrap"
        href="/uniprotkb?query=lit_author:eve"
      >
        Author
      </a>
      , 
      <a
        class="no-wrap"
        href="/uniprotkb?query=organism_name:eve"
      >
        Organism
      </a>
      , or 
      <a
        class="no-wrap"
        href="/uniprotkb?query=taxonomy_name:eve"
      >
        Taxonomy
      </a>
    </small>
  </span>
</DocumentFragment>
`;

exports[`SearchSuggestions should render suggestions for fields that has different taxon level 1`] = `
<DocumentFragment>
  <small>
     or restrict search to "
    <b>
      9606
    </b>
    " to 
    <a
      href="/uniprotkb?query=%28organism_id%3A9606%29"
    >
      exclude lower taxonomic ranks
    </a>
  </small>
</DocumentFragment>
`;

exports[`SearchSuggestions should render suggestions for fields that support exact match 1`] = `
<DocumentFragment>
  <small>
     or show only exact matches for 
    <a
      href="/uniprotkb?query=%28gene_exact%3Aapp%29"
    >
      app
    </a>
  </small>
</DocumentFragment>
`;
